<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bluetooth_connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_scan"/>

        <TextView
            android:id="@+id/bluetooth_paired_device_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/title"
            android:text="@string/bluetooth_paired_device_list_title" />

        <ListView
            android:id="@+id/bluetooth_paired_device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bluetooth_discovered_device_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/title"
            android:text="@string/bluetooth_discovered_device_list_title" />

        <ListView
            android:id="@+id/bluetooth_discovered_device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>